# blink

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: led.rs  main.rs  morse.rs
